plugins {
    id 'com.github.teruteru128.study.java-application-conventions'
}

version = '1.4.3.2-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(22)
    }
    sourceCompatibility = '22'
    targetCompatibility = '22'
}

compileJava {
    options.fork = true
    options.forkOptions.setMemoryInitialSize('16G')
    options.forkOptions.setMemoryMaximumSize('16G')
    options.compilerArgs += [
            // '--enable-preview'
            //, '-Xlint:preview'
    ]
}

application {
    mainModule = 'com.github.teruteru.foreign'
    mainClass = 'com.github.teruteru128.foreign.Main'
    applicationDefaultJvmArgs = [
            //'--enable-preview',
            '--enable-native-access=com.github.teruteru.bcrypt,com.github.teruteru.foreign,com.github.teruteru.foreign.gmp,com.github.teruteru.heapapi,com.github.teruteru.foreign.opencl,com.github.teruteru.foreign.setjmp,com.github.teruteru.foreign.windows',
            //'-Xms16G',
            //'-Xmx16G',
            //'-Djextract.trace.downcalls=true'
    ]
}

dependencies {
    implementation project(":bcrypt")
    implementation project(":gmp")
    implementation project(":heapapi")
    implementation project(":mpz_aprcl")
    implementation project(":opencl")
    implementation project(":setjmp")
    implementation project(":windows")
    // https://mvnrepository.com/artifact/org.bouncycastle/bcmail-jdk15on
    implementation 'org.bouncycastle:bcprov-jdk18on:1.78.1'
    // https://picocli.info/
    // https://mvnrepository.com/artifact/info.picocli/picocli
    implementation 'info.picocli:picocli:4.7.6'
    // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
    implementation 'org.slf4j:slf4j-api:2.0.13'
    // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api
    implementation 'org.apache.logging.log4j:log4j-slf4j2-impl:2.23.1'
    // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core
    implementation 'org.apache.logging.log4j:log4j-core:2.23.1'
    // https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc
    implementation 'org.xerial:sqlite-jdbc:3.45.3.0'
}
